# DRP-1

./: .env.example  .gitignore  .mcp.json  .mcp.json.backup  .ontology_config.json  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup  MEMORY.md  OPENSPEC_INTEGRATION_REPORT.md  README.md  api_client.js  auth.js  data_adapter.js  docker-compose.dev.yml  docker-compose.yml  ontology_output.ttl  prototype_app.js  setup-claude-config.ps1  setup-claude-config.sh  setup-global.ps1  setup-global.sh  setup-global_back.ps1  treasury_vanguard_omnis_i18n.html  verify_openspec.py  央企数字资产监管平台_prototype.html  央企资金监管大屏.html
backend/: .coverage  pyproject.toml  requirements.txt
backend/.hypothesis/constants/: 005d312c461a2fdd  007957607c2d3c1b  01930d71a49b76d6  0497b236336115ba  11b2f551cebb36b6  142df82d5d5f2f8e  (+58 more)
backend/openspec/: DEVELOPMENT.md  Makefile  README.md
backend/tests/: conftest.py  test_auth_middleware.py  test_auth_policy.py  test_auth_service.py  test_cache.py  test_circuit_breaker.py  test_conflict_detector.py  test_ctio_ontology.py  test_data_scope_smoke.py  test_ddl_roundtrip.py  test_dept_service.py  test_drill.py  test_e2e_integration.py  test_e2e_smoke.py  test_etl.py  test_expr_parser.py  test_graphdb_client.py  test_health.py  test_indicator_compliance.py  test_indicators.py  test_indicators_unit.py  test_integration.py  test_interceptor.py  test_mapping_engine.py  test_mask_serializer.py  test_multi_tenant_isolation.py  test_org_unit.py  test_properties.py  test_scope_registry.py  test_smoke.py  test_sparql_proxy.py  test_tasks.py  test_tenant_service.py
(+531 files in other folders)
